--- a/Site/produto/personalizado/index.html
+++ b/Site/produto/personalizado/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../../css/personalizado.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Bolos Personalizados</title>
@@ -19,16 +20,16 @@
     <header>
         <div id="caixao">
             <div class="conteudoHeader">
-                <a href="#"><img src="../imagens/logay.png" alt="logo escrito senhor bolo" width="258" height="50"></a>
+                <a href="../../index.html"><img src="../../imagens/logay.png" alt="logo escrito senhor bolo" width="258" height="50"></a>
                 <form>
                     <input type="text" placeholder="Digite para pesquisar">
                     <button type="submit">
-                        <img src="../imagens/lupa.png" alt="lupa de pesquisa">
+                        <img src="../../imagens/lupa.png" alt="lupa de pesquisa">
                     </button>
                 </form>
                 <a href="#" class="linkUsuario">
                     <div class="perfilUsuario">
-                        <img src="../imagens/Misaka_10032.jpg" alt="Foto de perfil do usuário">
+                        <img src="../../imagens/Misaka_10032.jpg" alt="Foto de perfil do usuário">
                         <h4> Felipe Ribeiro <br> <span> Ver perfil </span></h4>
                     </div>
                 </a>
@@ -43,16 +44,16 @@
         </div>
         <div id="caixinha">
             <nav>
-                <a href="../pesquisa/index.html">
+                <a href="../../pesquisa/index.html">
                     Produtos
                 </a>
-                <a href="../produto/personalizado/index.html">
+                <a href="../../produto/personalizado/index.html">
                     Personalizado
                 </a>
-                <a href="../cupons/index.html">
+                <a href="../../cupons/index.html">
                     Cupons
                 </a>
-                <a href="../aboutus/index.html">
+                <a href="../../aboutus/index.html">
                     Sobre nós
                 </a>
             </nav>
@@ -306,7 +307,7 @@
     <footer>
         <div class="tudinho">
             <div>
-                <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
+                <img class="logro" src="../../imagens/logay.png" alt="logo escrito senhor bolo">
                 <p class="dev">
                     Desenvolvido pelo grupo CDP Inc.
                 </p>
@@ -339,8 +340,8 @@
                     Siga-nos
                 </p>
                 <div>
-                    <img src="../imagens/instagram.png" alt="logo do instagram">
-                    <img src="../imagens/twitter-logo-7.png" alt="logo do twitter"> 
+                    <img src="../../imagens/instagram.png" alt="logo do instagram">
+                    <img src="../../imagens/twitter-logo-7.png" alt="logo do twitter"> 
                 </div>
             </div>
             <div class="app">
@@ -348,8 +349,8 @@
                     Baixe Nossos Aplicativos
                 </p>
                 <div class="zap">
-                    <img class="aba" src="../imagens/DownloadAndroid.png" alt="Faça o Download do aplicativo no Android">
-                    <img class="abb" src="../imagens/appstore.png" alt="Faça o Download do aplicativo na AppStore">
+                    <img class="aba" src="../../imagens/DownloadAndroid.png" alt="Faça o Download do aplicativo no Android">
+                    <img class="abb" src="../../imagens/appstore.png" alt="Faça o Download do aplicativo na AppStore">
                 </div>
             </div>
         </div>
