--- a/Site/cupons/index.html
+++ b/Site/cupons/index.html
@@ -5,7 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+        <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
         <link rel="stylesheet" href="../css/cupons.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <title> Seus cupons</title>
@@ -59,7 +61,7 @@
                     <img src="../imagens/cupom.png" class="lista" alt="ícone de cupom">
                     <h5 class="oi"> Cupons disponíveis </h5>
                 </div>
-                <div class="doisdivs">
+                <div class="cupomContainer">
                     <div class="cupom">
                         <div class="texto">
                             <h3>10% OFF em todo o site</h3>
@@ -83,9 +85,7 @@
                         </button>
                         </a>
                     </div>
-                </div>
     
-                <div class="doisdivs">
                     <div class="cupom">
                         <div class="texto">
                             <h3>10% OFF em todo o site</h3>
@@ -109,8 +109,7 @@
                         </button>
                         </a>
                     </div>
-                </div>
-                <div class="doisdivs">
+
                     <div class="cupom">
                         <div class="texto">
                             <h3>10% OFF em todo o site</h3>
