--- a/Site/pedidos/rastreio/index.html
+++ b/Site/pedidos/rastreio/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/Site/css/rastreio.css">
+    <link rel="stylesheet" href="../../css/rastreio.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Rastreio</title>
 </head>
@@ -16,16 +16,16 @@
     <header>
         <div id="caixao">
             <div class="conteudoHeader">
-                <a href="#"><img src="../imagens/logay.png" alt="logo escrito senhor bolo" width="258" height="50"></a>
+                <a href="#"><img src="../../imagens/logay.png" alt="logo escrito senhor bolo" width="258" height="50"></a>
                 <form>
                     <input type="text" placeholder="Digite para pesquisar">
                     <button type="submit">
-                        <img src="../imagens/lupa.png" alt="lupa de pesquisa">
+                        <img src="../../imagens/lupa.png" alt="lupa de pesquisa">
                     </button>
                 </form>
                 <a href="#" class="linkUsuario">
                     <div class="perfilUsuario">
-                        <img src="../imagens/Misaka_10032.jpg" alt="Foto de perfil do usuário">
+                        <img src="../../imagens/Misaka_10032.jpg" alt="Foto de perfil do usuário">
                         <h4> Felipe Ribeiro <br> <span> Ver perfil </span></h4>
                     </div>
                 </a>
@@ -40,16 +40,16 @@
         </div>
         <div id="caixinha">
             <nav>
-                <a href="../pesquisa/index.html">
+                <a href="../../pesquisa/index.html">
                     Produtos
                 </a>
-                <a href="../produto/personalizado/index.html">
+                <a href="../../produto/personalizado/index.html">
                     Personalizado
                 </a>
-                <a href="../cupons/index.html">
+                <a href="../../cupons/index.html">
                     Cupons
                 </a>
-                <a href="../aboutus/index.html">
+                <a href="../../aboutus/index.html">
                     Sobre nós
                 </a>
             </nav>
@@ -58,7 +58,7 @@
     <main>
         <div class="rastrear">
             <div class="texto">
-            <img src="/Site/imagens/ic_edit_location_24px.png" class="imagem" alt="Ícone de Marcação">
+            <img src="../../imagens/ic_edit_location_24px.png" class="imagem" alt="Ícone de Marcação">
             <h3>
                 Onde deseja que entreguemos seu pedido?
             </h3>
@@ -66,13 +66,13 @@
             <form>
                 <input type="text">
                 <button type="submit">
-                    <img src="/Site/imagens/lupa.png" alt="lupa de pesquisa">
+                    <img src="../../imagens/lupa.png" alt="lupa de pesquisa">
                 </button>
             </form>
             <div class="enderecos">
                 <div class="endereco">
                     <div>
-                        <img src="/Site/imagens/ic_home_24px.png" alt="Ícone de Casa" class="img">
+                        <img src="../../imagens/ic_home_24px.png" alt="Ícone de Casa" class="img">
                     </div>
                     <div>
                         <p> R. WhatsApp, 125</p>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="endereco">
                     <div>
-                        <img src="/Site/imagens/ic_home_24px.png" alt="Ícone de Casa" class="img">
+                        <img src="../../imagens/ic_home_24px.png" alt="Ícone de Casa" class="img">
                     </div>
                     <div>
                         <p> R. WhatsApp, 125</p>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="endereco">
                     <div>
-                        <img src="/Site/imagens/ic_home_24px.png" alt="Ícone de Casa" class="img">
+                        <img src="../../imagens/ic_home_24px.png" alt="Ícone de Casa" class="img">
                     </div>
                     <div>
                         <p> R. WhatsApp, 125</p>
@@ -103,7 +103,7 @@
     <footer>
         <div class="tudinho">
             <div>
-                <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
+                <img class="logro" src="../../imagens/logay.png" alt="logo escrito senhor bolo">
                 <p class="dev">
                     Desenvolvido pelo grupo CDP Inc.
                 </p>
@@ -136,8 +136,8 @@
                     Siga-nos
                 </p>
                 <div>
-                    <img src="../imagens/instagram.png" alt="logo do instagram">
-                    <img src="../imagens/twitter-logo-7.png" alt="logo do twitter"> 
+                    <img src="../../imagens/instagram.png" alt="logo do instagram">
+                    <img src="../../imagens/twitter-logo-7.png" alt="logo do twitter"> 
                 </div>
             </div>
             <div class="app">
@@ -145,8 +145,8 @@
                     Baixe Nossos Aplicativos
                 </p>
                 <div class="zap">
-                    <img class="aba" src="../imagens/DownloadAndroid.png" alt="Faça o Download do aplicativo no Android">
-                    <img class="abb" src="../imagens/appstore.png" alt="Faça o Download do aplicativo na AppStore">
+                    <img class="aba" src="../../imagens/DownloadAndroid.png" alt="Faça o Download do aplicativo no Android">
+                    <img class="abb" src="../../imagens/appstore.png" alt="Faça o Download do aplicativo na AppStore">
                 </div>
             </div>
         </div>
