Ribeiro Maluco edson
Ribassssssss

--- a/Site/carrinho/index.html
+++ b/Site/carrinho/index.html
@@ -14,20 +14,20 @@
     <header>
         <div id="caixao">
             <div class="conteudoHeader">
-                <a href="#"><img src="../imagens/logay.png" alt="logo escrito senhor bolo" width="258" height="50"></a>
+                <a href="../home/index.html"><img src="../imagens/logay.png" alt="logo escrito senhor bolo" width="258" height="50"></a>
                 <form>
                     <input type="text" placeholder="Digite para pesquisar">
                     <button type="submit">
                         <img src="../imagens/lupa.png" alt="lupa de pesquisa">
                     </button>
                 </form>
-                <a href="#" class="linkUsuario">
+                <a href="../perfil/index.html" class="linkUsuario">
                     <div class="perfilUsuario">
                         <img src="../imagens/Misaka_10032.jpg" alt="Foto de perfil do usuário">
                         <h4> Felipe Ribeiro <br> <span> Ver perfil </span></h4>
                     </div>
                 </a>
-                <a href="#" class="linkCarrinho">
+                <a href="../carrinho/index.html" class="linkCarrinho">
                     <div class="carrinhoCompras">
                         <span class="material-icons md-30">
                             shopping_cart
@@ -54,85 +54,259 @@
         </div>
     </header>
     <main>
-        <div class="inicio">
-            <img src="../imagens/carrinho.png" class="lista" alt="ícone de carrinho">
-            <h5 class="oi"> Carrinho </h5>
-        </div>
-        <div class="pedido">
-            <img src="../imagens/66opkkln.png" class="bolo" alt=" Bolo do Haro ">
-            <h3 class="titulo"> Bolo Estrogenado </h3>
-            <div class="iniciodois">
-                <img src="../imagens/logobolo.png" class="caminhao" alt=" Ícone de Bolo">
-                <p class="acaminho"> Bolo de chocolate com cobertura de glacê colorido </p>
+        <div class="tudo">
+            <div class="titulo">
+                <img src="../imagens/carrinho.png" alt=" ícone de carrinho">
+                <p>
+                    Meu Carrinho
+                </p>
             </div>
-            <h3 class="preco"> R$: 20,00 </h3>
-            <div class="botoes"> 
-                <button class="um">
-                    <div class=botao>
-                        <p> Comprar </p>
+
+            <div class="englobar">
+                <div class="lista">
+                    <div class="produto">
+                        <div class="baixo">
+                            <img src="../imagens/retangulo.png" alt="bolo de chocolate">
+                            <p>
+                                Bolo de bolo
+                                <br>
+                                Bolo doce
+                            </p>
+                            <p>
+                                Quantidade
+                                <br>
+                                <div class="quantidadeBolo">
+                                    <h4>
+                                        Quantidade
+                                    </h4>
+                                    <div class="qtd">
+                                        <button class="bot">
+                                            <p>
+                                                -
+                                            </p>
+                                        </button>
+                                        <input type="text">
+                                        <button class="bot">
+                                            <p>
+                                                +
+                                            </p>
+                                        </button>
+                                    </div>
+                                </div>
+                            </p>
+                            <p>
+                                Total
+                                <br>
+                                R$: 25.00
+                            </p>
+                            <button>
+                                <img src="../imagens/lixeira.png" alt="ícone de lixeira">
+                            </button>
+                        </div>
                     </div>
-                </button>
-                <button class="dois">
-                    <p> Remover do carrinho </p>
-                </button>
-            </div>
-        </div>
-
-        <div class="pedido">
-            <img src="../imagens/66opkkln.png" class="bolo" alt=" Bolo do Haro ">
-            <h3 class="titulo"> Bolo Estrogenado </h3>
-            <div class="iniciodois">
-                <img src="../imagens/logobolo.png" class="caminhao" alt=" Ícone de Bolo">
-                <p class="acaminho"> Bolo de chocolate com cobertura de glacê colorido </p>
-            </div>
-            <h3 class="preco"> R$: 20,00 </h3>
-            <div class="botoes"> 
-                <button class="um">
-                    <div class=botao>
-                        <p> Comprar </p>
+                    <div class="produto">
+                        <div class="baixo">
+                            <img src="../imagens/retangulo.png" alt="bolo de chocolate">
+                            <p>
+                                Bolo de bolo
+                                <br>
+                                Bolo doce
+                            </p>
+                            <p>
+                                Quantidade
+                                <br>
+                                <div class="quantidadeBolo">
+                                    <h4>
+                                        Quantidade
+                                    </h4>
+                                    <div class="qtd">
+                                        <button class="bot">
+                                            <p>
+                                                -
+                                            </p>
+                                        </button>
+                                        <input type="text">
+                                        <button class="bot">
+                                            <p>
+                                                +
+                                            </p>
+                                        </button>
+                                    </div>
+                                </div>
+                            </p>
+                            <p>
+                                Total
+                                <br>
+                                R$: 25.00
+                            </p>
+                            <button>
+                                <img src="../imagens/lixeira.png" alt="ícone de lixeira">
+                            </button>
+                        </div>
                     </div>
-                </button>
-                <button class="dois">
-                    <p> Remover do carrinho </p>
-                </button>
-            </div>
-        </div>
-
-        <div class="pedido">
-            <img src="../imagens/66opkkln.png" class="bolo" alt=" Bolo do Haro ">
-            <h3 class="titulo"> Bolo Estrogenado </h3>
-            <div class="iniciodois">
-                <img src="../imagens/logobolo.png" class="caminhao" alt=" Ícone de Bolo">
-                <p class="acaminho"> Bolo de chocolate com cobertura de glacê colorido </p>
-            </div>
-            <h3 class="preco"> R$: 20,00 </h3>
-            <div class="botoes"> 
-                <button class="um">
-                    <div class=botao>
-                        <p> Comprar </p>
+                    <div class="produto">
+                        <div class="baixo">
+                            <img src="../imagens/retangulo.png" alt="bolo de chocolate">
+                            <p>
+                                Bolo de bolo
+                                <br>
+                                Bolo doce
+                            </p>
+                            <p>
+                                Quantidade
+                                <br>
+                                <div class="quantidadeBolo">
+                                    <h4>
+                                        Quantidade
+                                    </h4>
+                                    <div class="qtd">
+                                        <button class="bot">
+                                            <p>
+                                                -
+                                            </p>
+                                        </button>
+                                        <input type="text">
+                                        <button class="bot">
+                                            <p>
+                                                +
+                                            </p>
+                                        </button>
+                                    </div>
+                                </div>
+                            </p>
+                            <p>
+                                Total
+                                <br>
+                                R$: 25.00
+                            </p>
+                            <button>
+                                <img src="../imagens/lixeira.png" alt="ícone de lixeira">
+                            </button>
+                        </div>
                     </div>
-                </button>
-                <button class="dois">
-                    <p> Remover do carrinho </p>
-                </button>
-            </div>            
-        </div>
-
-        <div class="bot">
-            <button class="remover">
-                <p>Remover todos os itens</p>
-            </button>
-
-            <button class="finalizar">
-                <p>Finalizar compra</p>
-            </button>
+                    <div class="produto">
+                        <div class="baixo">
+                            <img src="../imagens/retangulo.png" alt="bolo de chocolate">
+                            <p>
+                                Bolo de bolo
+                                <br>
+                                Bolo doce
+                            </p>
+                            <p>
+                                Quantidade
+                                <br>
+                                <div class="quantidadeBolo">
+                                    <h4>
+                                        Quantidade
+                                    </h4>
+                                    <div class="qtd">
+                                        <button class="bot">
+                                            <p>
+                                                -
+                                            </p>
+                                        </button>
+                                        <input type="text">
+                                        <button class="bot">
+                                            <p>
+                                                +
+                                            </p>
+                                        </button>
+                                    </div>
+                                </div>
+                            </p>
+                            <p>
+                                Total
+                                <br>
+                                R$: 25.00
+                            </p>
+                            <button>
+                                <img src="../imagens/lixeira.png" alt="ícone de lixeira">
+                            </button>
+                        </div>
+                    </div>
+                    <div class="produto">
+                        <div class="baixo">
+                            <img src="../imagens/retangulo.png" alt="bolo de chocolate">
+                            <p>
+                                Bolo de bolo
+                                <br>
+                                Bolo doce
+                            </p>
+                            <p>
+                                Quantidade
+                                <br>
+                                <div class="quantidadeBolo">
+                                    <h4>
+                                        Quantidade
+                                    </h4>
+                                    <div class="qtd">
+                                        <button class="bot">
+                                            <p>
+                                                -
+                                            </p>
+                                        </button>
+                                        <input type="text">
+                                        <button class="bot">
+                                            <p>
+                                                +
+                                            </p>
+                                        </button>
+                                    </div>
+                                </div>
+                            </p>
+                            <p>
+                                Total
+                                <br>
+                                R$: 25.00
+                            </p>
+                            <button>
+                                <img src="../imagens/lixeira.png" alt="ícone de lixeira">
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="dados">
+                    <div class="total">
+                        <p>
+                            Total do carrinho
+                        </p>
+                        <hr>
+                        <p>
+                            Subtotal
+                        </p>
+                        <p>
+                            R$ 25,00
+                        </p>
+                    </div>
+                    <button>
+                        <p>
+                            Fechar a Compra
+                        </p>
+                    </button>
+                    <div class="freteCupom">
+                        <p>
+                            Calcule o seu Frete
+                        </p>
+                        <input type="text">
+                        <button>
+                            <p>
+                                Calcular
+                            </p>
+                        </button>
+                        <button>
+                            Adicionar Cupom
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
-
     <footer>
         <div class="tudinho">
             <div>
-                <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
+                <a href="../home/index.html">
+                    <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
+                </a>
                 <p class="dev">
                     Desenvolvido pelo grupo CDP Inc.
                 </p>
