--- a/Site/login/index.html
+++ b/Site/login/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div id="caixao">
-            <a href="#"><img src="../imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
+            <a href="../home/index.html"><img src="../imagens/logay.png" alt="Logo escrito Senhor Bolo" width="258" height="50"></a>
             <form>
                 <input type="text" placeholder="Digite para pesquisar">
                 <button type="submit">
@@ -75,7 +75,9 @@
     <footer>
         <div class="tudinho">
             <div>
-                <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
+                <a href="../home/index.html">
+                    <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
+                </a>
                 <p class="dev">
                     Desenvolvido pelo grupo CDP Inc.
                 </p>
