--- a/Site/pedidos/pedido.html
+++ b/Site/pedidos/pedido.html
@@ -14,20 +14,20 @@
     <header>
         <div id="caixao">
             <div class="conteudoHeader">
-                <a href="#"><img src="../imagens/logay.png" alt="logo escrito senhor bolo" width="258" height="50"></a>
+                <a href="../home/index.html"><img src="../imagens/logay.png" alt="logo escrito senhor bolo" width="258" height="50"></a>
                 <form>
                     <input type="text" placeholder="Digite para pesquisar">
                     <button type="submit">
                         <img src="../imagens/lupa.png" alt="lupa de pesquisa">
                     </button>
                 </form>
-                <a href="#" class="linkUsuario">
+                <a href="../perfil/index.html" class="linkUsuario">
                     <div class="perfilUsuario">
                         <img src="../imagens/Misaka_10032.jpg" alt="Foto de perfil do usuário">
                         <h4> Felipe Ribeiro <br> <span> Ver perfil </span></h4>
                     </div>
                 </a>
-                <a href="#" class="linkCarrinho">
+                <a href="../carrinho/index.html" class="linkCarrinho">
                     <div class="carrinhoCompras">
                         <span class="material-icons md-30">
                             shopping_cart
@@ -54,107 +54,211 @@
         </div>
     </header>
     <main>
-        <div class="inicio">
-            <img src="../imagens/pedido.png" class="lista" alt="ícone de pedido">
-            <h5 class="oi"> Meus pedidos </h5>
-        </div>
-        <p class="emaberto"> Em aberto </p>
-        <div class="pedido">
-            <p> Pedido #00001 </p>
-            <img src="../imagens/66opkkln.png" class="bolo" alt=" Bolo do Haro ">
-            <h3 class="titulo"> Bolo Estrogenado</h3>
-            <div class="iniciodois">
-                <img src="../imagens/caminhao.png" class="caminhao" alt="ícone de caminhão">
-                <p class="acaminho"> A caminho </p>
+        <div class="tudo">
+            <div class="titulo">
+                <img src="../imagens/pedido.png" alt=" ícone de lista">
+                <p>
+                    Meus Pedidos
+                </p>
             </div>
-            <h3 class="preco"> R$: 20,00 </h3>
-            <div class="botoes"> 
-                <button class="um">
-                    <div class=botao>
-                        <p> Rastrear </p>
-                        <img src="../imagens/aviaodepapel.png" alt=" Símbolo de rastrear" class="rastrear">
+            <div class="englobar">
+                <div class="pedido">
+                    <p>
+                        Em Aberto
+                    </p>
+
+                    <div class="emAberto">
+                        <div class="cima">
+                            <div class="esq">
+                                <p>
+                                    Pedido #00001
+                                </p>
+                                <img src="../imagens/caminhao.png" alt="ícone de caminhão">
+                                <p>
+                                    A caminho
+                                </p>
+                                <p>
+                                    Total do pedido
+                                </p>
+                                <p>
+                                    R$: 20,00
+                                </p>
+                            </div>
+                            <div class="dir">
+                                <button class="rastreio">
+                                    <p>
+                                        Rastrear
+                                    </p>
+                                    <img src="../imagens/aviaodepapel.png" alt="ícone de rastreio">
+                                </button>
+                                <button class="cancela">
+                                    <p>
+                                        Cancelar
+                                    </p>
+                                </button>
+                            </div>
+                        </div>
+                        <p>
+                            Itens do Pedido
+                        </p>
+                        <div class="baixo">
+                            <img src="../imagens/retangulo.png" alt="bolo de chocolate">
+                            <p>
+                                Bolo de bolo
+                                <br>
+                                Bolo doce
+                            </p>
+                            <p>
+                                Quantidade
+                                <br>
+                                1x
+                            </p>
+                            <p>
+                                Total
+                                <br>
+                                R$: 25.00
+                            </p>
+                        </div>
+                        <hr>
+                        <div class="baixo">
+                            <img src="../imagens/retangulo.png" alt="bolo de chocolate">
+                            <p>
+                                Bolo de bolo
+                                <br>
+                                Bolo doce
+                            </p>
+                            <p>
+                                Quantidade
+                                <br>
+                                1x
+                            </p>
+                            <p>
+                                Total
+                                <br>
+                                R$: 25.00
+                            </p>
+                        </div>
                     </div>
-                </button>
-                <button class="dois">
-                    <p> Cancelar </p>
-                </button>
+                </div>
             </div>
-        </div>
 
-        <p class="emaberto" > Entregues </p>
+            <div class="englobar">
+                <div class="pedido">
+                    <p>
+                        Entregue
+                    </p>
 
-        <div class="pedido">
-            <p> Pedido #00002 </p>
-            <img src="../imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
-            <h3 class="titulo"> Bolo Estrogenado</h3>
-            <div class="iniciodois">
-                <img src="../imagens/caminhao.png" class="caminhao" alt="caminhão">
-                <p class="acaminho">Entregue </p>
-            </div>
-            <h3 class="preco"> R$: 20,00 </h3>
-            <div class="botoes"> 
-                <button class="um">
-                    <div class=botao>
-                        <p> Rastrear </p>
-                        <img src="../imagens/aviaodepapel.png" alt=" Símbolo de rastrear" class="rastrear">
+                    <div class="emAberto">
+                        <div class="cima">
+                            <div class="esq">
+                                <p>
+                                    Pedido #00001
+                                </p>
+                                <img src="../imagens/caminhao.png" alt="ícone de caminhão">
+                                <p>
+                                    A caminho
+                                </p>
+                                <p>
+                                    Total do pedido
+                                </p>
+                                <p>
+                                    R$: 20,00
+                                </p>
+                            </div>
+                            <div class="dir">
+                                <button class="reportarProblema">
+                                    <p>
+                                        Reportar um problema
+                                    </p>
+                                </button>
+                            </div>
+                        </div>
+                        <p>
+                            Itens do Pedido
+                        </p>
+                        <div class="baixo">
+                            <img src="../imagens/retangulo.png" alt="bolo de chocolate">
+                            <p>
+                                Bolo de bolo
+                                <br>
+                                Bolo doce
+                            </p>
+                            <p>
+                                Quantidade
+                                <br>
+                                1x
+                            </p>
+                            <p>
+                                Total
+                                <br>
+                                R$: 25.00
+                            </p>
+                        </div>
                     </div>
-                </button>
-                <button class="dois">
-                    <p> Reportar problema </p>
-                </button>
-            </div>
-        </div>
+                </div>
 
-        <div class="pedido">
-            <p> Pedido #00003 </p>
-            <img src="../imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
-            <h3 class="titulo"> Bolo Estrogenado</h3>
-            <div class="iniciodois">
-                <img src="../imagens/caminhao.png" class="caminhao" alt="caminhão">
-                <p class="acaminho"> Entregue </p>
-            </div>
-            <h3 class="preco"> R$: 20,00 </h3>
-            <div class="botoes"> 
-                <button class="um">
-                    <div class=botao>
-                        <p> Rastrear </p>
-                        <img src="../imagens/aviaodepapel.png" alt=" Símbolo de rastrear" class="rastrear">
+                <div class="pedido">
+                    <p>
+                        Entregue
+                    </p>
+
+                    <div class="emAberto">
+                        <div class="cima">
+                            <div class="esq">
+                                <p>
+                                    Pedido #00001
+                                </p>
+                                <img src="../imagens/caminhao.png" alt="ícone de caminhão">
+                                <p>
+                                    A caminho
+                                </p>
+                                <p>
+                                    Total do pedido
+                                </p>
+                                <p>
+                                    R$: 20,00
+                                </p>
+                            </div>
+                            <div class="dir">
+                                <button class="reportarProblema">
+                                    <p>
+                                        Reportar um problema
+                                    </p>
+                                </button>
+                            </div>
+                        </div>
+                        <p>
+                            Itens do Pedido
+                        </p>
+                        <div class="baixo">
+                            <img src="../imagens/retangulo.png" alt="bolo de chocolate">
+                            <p>
+                                Bolo de bolo
+                                <br>
+                                Bolo doce
+                            </p>
+                            <p>
+                                Quantidade
+                                <br>
+                                1x
+                            </p>
+                            <p>
+                                Total
+                                <br>
+                                R$: 25.00
+                            </p>
+                        </div>
                     </div>
-                </button>
-                <button class="dois">
-                    <p> Reportar problema </p>
-                </button>
+                </div>
             </div>
         </div>
-
-        <div class="pedido">
-            <p> Pedido #00004 </p>
-            <img src="../imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
-            <h3 class="titulo"> Bolo Estrogenado</h3>
-            <div class="iniciodois">
-                <img src="../imagens/caminhao.png" class="caminhao" alt="caminhão">
-                <p class="acaminho"> Entregue </p>
-            </div>
-            <h3 class="preco"> R$: 20,00 </h3>
-            <div class="botoes"> 
-                <button class="um">
-                    <div class=botao>
-                        <p> Rastrear </p>
-                        <img src="../imagens/aviaodepapel.png" alt=" Símbolo de rastrear" class="rastrear">
-                    </div>
-                </button>
-                <button class="dois">
-                    <p> Reportar problema </p>
-                </button>
-            </div>
-        </div>
-
-        
     </main>
     <footer>
         <div class="tudinho">
             <div>
-                <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
+                <a href="../home/index.html">
+                    <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
+                </a>
                 <p class="dev">
                     Desenvolvido pelo grupo CDP Inc.
                 </p>
