--- a/Site/home/index.html
+++ b/Site/home/index.html
@@ -20,15 +20,15 @@
     <header>
         <div id="caixao">
             <div class="conteudoHeader">
-                <a href="#"><img src="../imagens/logay.png" alt="logo escrito senhor bolo" width="258" height="50"></a>
+                <a href="../home/index.html"><img src="../imagens/logay.png" alt="logo escrito senhor bolo" width="258" height="50"></a>
                 
-                <a href="#" class="linkUsuario">
+                <a href="../perfil/index.html" class="linkUsuario">
                     <div class="perfilUsuario">
                         <img src="../imagens/Misaka_10032.jpg" alt="Foto de perfil do usuário">
                         <h4> Felipe Ribeiro <br> <span> Ver perfil </span></h4>
                     </div>
                 </a>
-                <a href="#" class="linkCarrinho">
+                <a href="../carrinho/index.html" class="linkCarrinho">
                     <div class="carrinhoCompras">
                         <span class="material-icons md-30">
                             shopping_cart
@@ -321,7 +321,9 @@
     <footer>
         <div class="tudinho">
             <div>
-                <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
+                <a href="../home/index.html">
+                    <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
+                </a>
                 <p class="dev">
                     Desenvolvido pelo grupo CDP Inc.
                 </p>
